@@ -4,7 +4,7 @@
     <td width="170" valign="top"> 
       <table width="170" border="0" cellspacing="0" cellpadding="0">
         <tr> 
-          <td><table width="289" border="0" cellpadding="5" cellspacing="1" bgcolor="#FFFFFF">
+          <td><table width="257" border="0" cellpadding="5" cellspacing="1" bgcolor="#FFFFFF">
               <tr bgcolor="#ddddff"> 
                 <td class="title"><table width="100%" border="0" cellspacing="0" cellpadding="0">
                     <tr> 
@@ -19,7 +19,7 @@
               {section name=error_cell show=$error_out} {/section} </table></td>
         </tr>
         <tr> 
-          <td><div align="right"><img src="{$root}img/shadow1.gif" width="289" height="9"></div></td>
+          <td><div align="right"><img src="{$root}img/shadow1.gif" height="9"></div></td>
         </tr>
       </table>
     </td>
