@@ -27,7 +27,7 @@
         </table></td>
     </tr>
     <tr> 
-      <td><div align="right"><img src="{$root}img/shadow1.gif" width="289" height="9"></div></td>
+      <td><div align="right"><img src="{$root}img/shadow1.gif" height="9"></div></td>
     </tr>
   </table>
 
